--- a/CustomSolutions/readme
+++ b/CustomSolutions/readme
@@ -1,3 +1,4 @@
 
-Under Custom Solutions, we enter solutions created for customers that could benefit more Education Organizations. These solution are to be used as your own solutions and not as Microsoft services. Source code is available under the umbrella agreement of the O365-EDU-Tools.
+Under Custom Solutions, we enter solutions created for customers that could benefit more Education Organizations. 
+These solution are to be used as your own solutions and not as Microsoft services. Source code is available under the umbrella agreement of the O365-EDU-Tools.
 
