--- a/CustomSolutions/readme
+++ b/CustomSolutions/readme
@@ -2,3 +2,10 @@
 Under Custom Solutions, we enter solutions created for customers that could benefit more Education Organizations. 
 These solution are to be used as your own solutions and not as Microsoft services. Source code is available under the umbrella agreement of the O365-EDU-Tools.
 
+Solution TeamTemplateImport, this is the first part of the total solution for Team Templates. 
+This part will take your source Team templates and download the files on a Azure Storage Account and store the structure into a SQL Azure.
+Please read the readme of the project more detailed instructions.
+
+Solution TeamTemplateExport, this is the second part of the total solution for Team Templates. 
+This part will take your source Team templates that you downloaded into Azure blog and SQL and distribute the content into the target teams. 
+Please read the readme of the project more detailed instructions.
